--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/kaivi/ReactInlineEdit#readme",
   "peerDependencies": {
-    "react": "^0.14.6 || 15.x.x"
+    "react": "16.x.x"
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
@@ -37,6 +37,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "prop-types": "^15.7.2",
     "webpack": "^1.12.11"
-  }
+  },
+  "dependencies": {}
 }
